# BioNeuralNet

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .readthedocs.yaml  .~lock.clinical_raw.csv#  ArunTest.py  BioNeuralNet.ipynb  CHANGELOG.md  COPDGeneMetadata.csv  Cancer_example.ipynb  Cancer_example2.ipynb  MANIFEST.in  README-GraphTransformers.md  README.md  TCGA-BRCA_Datatest copy.ipynb  TOPMED.ipynb  config.yml  conftest.py  datasets.ipynb  graph_mining_pd.md  main.py  pypi.md  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: docs.yml  pre-commit.yml  publish.yml  python-app.yml  readthedocs.yml
Notebooks/: Quick_Start.ipynb  TCGA-KIPAN.ipynb  TCGA-LGG.ipynb
PD-Notebooks/: PD.ipynb  graph_builder.py  graph_mining_pd.md
PD-Notebooks/analysis/: __init__.py  baseline_clustering.py  embedding_analysis.py  motif_finding.py  pathway_enrichment.py  pd_validation.py
PD-Notebooks/datasets/: GSE165082_raw_counts_GRCh38.p13_NCBI (1).tsv  README_ANNOTATIONS.md
PD-Notebooks/models/: __init__.py
PD-Notebooks/processing/: __init__.py  multiomics_loader.py  multiomics_processing.py  parkinsons_processing.py
TCGA-Notebooks/: ROSMAP.ipynb  TCGA-BRCA.ipynb  TCGA-Biomarkers.ipynb  TCGA-GBMLGG.ipynb  TCGA-KIPAN.ipynb  TCGA-PAAD.ipynb
bioneuralnet/: __init__.py
bioneuralnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bioneuralnet/analysis/: __init__.py  base_feature_selector.py  correlation_analysis.py  dynamic_visualization.py  feature_selector.py  static_visualization.py
bioneuralnet/clustering/: CSCI5250TermProjectExtendingClustringComponent.ipynb  __init__.py  correlated_louvain.py  correlated_pagerank.py  hierarchical.py  hybrid_louvain.py  leiden.py  leiden_notebook.ipynb  leiden_upd.py  louvain.py  pagerank.py  spectral.py  spectral_notebook.ipynb
bioneuralnet/datasets/: __init__.py  dataset_loader.py  parkinsons_loader.py
bioneuralnet/downstream_task/: __init__.py  dpmon.py  subject_representation.py
bioneuralnet/explainability/: __init__.py  dpmon_explainer.py
bioneuralnet/external_tools/: SmCCNet.R  WGCNA.R  __init__.py  cptac_wrapper.py  dynamic_visualization.py  extract_CVfold.R  extract_CVfold.py  node2vec.py  rdata_to_df.R  rdata_to_df.py  smccnet.py
bioneuralnet/graph_generation/: SmCCNet.R  WGCNA.R  __init__.py  smccnet.py  (+1 more)
cancer_output_1/: size_100_net_1.csv  size_14_net_4.csv  size_23_net_5.csv  size_24_net_3.csv  size_31_net_2.csv
cancer_output_2/: CVResult.csv  size_21_net_3.Rdata  size_21_net_3.csv  size_46_net_2.Rdata  size_46_net_2.csv  size_70_net_1.Rdata  size_70_net_1.csv
docs/: README.md  requirements.txt
examples/: GraphTransformer.ipynb  all_examples.py  download_tcga_data.py  dynamic_visualization_example.py  feature_selector_example.py  gnns_example.py  graph_transformer_evaluation.py  hierarchical_example.py  hybrid_example_1.py  hybrid_example_2.py  hybrid_example_3.py  node2vec_example.py  pagerank_example.py  preprocess_tcga_string.py  preprocessing_example.py  smccnet_example.py  static_visualization_example.py  subject_representation_example.py  test_preprocessing.py  test_synthetic_data.py  wgcna_example.py
m1_graph_generation/: __init__.py  run.py
m2_clustering/: run.py
m3_network_embedding/: __init__.py  run.py
m4_subject_representation/: __init__.py  run.py
m5_integrated_tasks/: __init__.py  config.yml  run.py
m5_task_optimization/: __init__.py  run.py
old/: README.md  main.py  requirements.txt
scripts/: fast-install.py  quick-start.py  requirements-cpu.txt  requirements-dev.txt  requirements-gpu.txt  setup-R.bat  setup-R.sh  setup-env.sh
tests/: README.md  __init__.py  test_correlation_metrics.py  test_data_utils.py  test_dataset_dpmon.py  test_dataset_gnn_embeddings.py  test_dataset_loader.py  test_dataset_subject_representation.py  test_downstream_dpmon.py  test_dpmon.py  test_dynamic_visualization.py  test_feature_selector.py  test_gnn_embedding.py  test_gnns.py  test_graph_gen.py  test_graph_transformer.py  test_hierarchical.py  test_hybrid_louvain.py  test_leiden.py  test_network_generate.py  test_network_tools.py  test_node2vec.py  test_pagerank.py  test_parkinsons_loader.py  test_parkinsons_processing.py  test_pd_analysis.py  test_pd_baseline.py  test_pd_gnn.py  test_pd_graph_builder.py  test_preprocess.py  test_smccnet.py  test_spectral.py  test_static_visualization.py  test_subject_representation.py  test_utils.py  test_utils_data.py  test_utils_feature_selection.py  test_utils_graph.py  test_utils_graph_tools.py  test_utils_preprocess.py  (+3 more)
utils/: __init__.py  adjust_components.py  file_helpers.py  load_data.py  parser.py
(+320 files in other folders)
