[metadata]
name = bioneuralnet
version = 0.1.0
author = Vicente Ramos
author_email = vicente.ramos@ucdenver.edu
description = A framework designed to analyze biological data through a series of computational steps. Capable of taking a network to a lower dimensional space. Opening the door for further analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UCD-BDLab/BioNeuralNet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Reports = https://github.com/UCD-BDLab/BioNeuralNet/issues
    Source = https://github.com/UCD-BDLab/BioNeuralNet

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    torch==2.0.0
    torch_geometric>=2.0.0
    PyYAML>=5.4
    pandas>=1.0
    numpy>=1.18
    scikit-learn>=0.24
    node2vec>=0.4.1
    matplotlib>=3.3
    ray[tune]>=2.0
    tensorboardX>=2.5
    networkx>=2.5
    pyvis>=0.2

[options.extras_require]
cpu =
    torch-scatter @ https://data.pyg.org/whl/torch-2.0.0+cpu-cp310-cp310-win_amd64.whl
    torch-sparse @ https://data.pyg.org/whl/torch-2.0.0+cpu-cp310-cp310-win_amd64.whl
cuda117 =
    torch-scatter @ https://data.pyg.org/whl/torch-2.0.0+cu117-cp310-cp310-win_amd64.whl
    torch-sparse @ https://data.pyg.org/whl/torch-2.0.0+cu117-cp310-cp310-win_amd64.whl
dev =
    # Testing
    pytest>=6.0
    pytest-cov
    pytest-mock
    # Documentation
    sphinx
    sphinx_rtd_theme
    sphinx-autosummary-accessors
    sphinxcontrib-napoleon
    # Code Quality and Formatting
    flake8
    black
    mypy
    # Additional Development Tools
    pre-commit
    tox
    # Build dependencies
    setuptools>=42
    twine

[options.packages.find]
where = .
exclude =
    tests
    docs
    examples

[options.entry_points]
# console_scripts =
#     bioneuralnet=bioneuralnet.__main__:main
