[metadata]
name = bioneuralnet
version = 0.2.0b2
author = Vicente Ramos
author_email = vicente.ramos@ucdenver.edu
description = A comprehensive framework for integrating multi-omics data with neural network embeddings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UCD-BDLab/BioNeuralNet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
project_urls =
    Bug Reports = https://github.com/UCD-BDLab/BioNeuralNet/issues
    Source = https://github.com/UCD-BDLab/BioNeuralNet

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    PyYAML>=5.4
    pandas>=1.0
    numpy>=1.18
    scikit-learn>=0.24
    node2vec>=0.4.1
    matplotlib>=3.3
    ray[tune]>=2.0
    tensorboardX>=2.5
    networkx>=2.5
    dtt>=0.9.0
    scipy
    cptac
    python-louvain
    debugpy
    seaborn
    umap-learn
    ipywidgets 
    python-louvain

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov
    pytest-mock
    sphinx
    sphinx_rtd_theme
    sphinx-autosummary-accessors
    sphinxcontrib-napoleon
    nbsphinx
    flake8
    black
    mypy
    git-filter-repo
    pre-commit
    tox
    setuptools>=42
    twine
    torch
    torch_geometric

[options.packages.find]
where = .
exclude =
    tests
    docs
    examples

