[metadata]
name = bioneuralnet
version = 1.2.2
author = Vicente Ramos
author_email = vicente.ramos@ucdenver.edu
description = A Graph Neural Network based Multi-Omics Network Data Analysis Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UCD-BDLab/BioNeuralNet
license = CC BY-NC-ND 4.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: Free for non-commercial use
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
project_urls =
    Bug Reports = https://github.com/UCD-BDLab/BioNeuralNet/issues
    Source = https://github.com/UCD-BDLab/BioNeuralNet

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    pandas>=2.2.3
    numpy>=1.26.4
    scipy>=1.13.1
    matplotlib>=3.10.3
    scikit-learn>=1.6.1
    statsmodels>=0.14.4
    networkx>=3.4.2
    pydantic>=2.12.5
    ray[tune]>=2.46.0
    tqdm>=4.66.0

[options.packages.find]
where = .
exclude =
    tests
    docs
    examples
